--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "author": "Kaitlin Salzke",
   "description": "Converts the TaskPaper-formatted note of the selected task into subtasks. Note '[ ]' is recognised as '-' to allow for notes to be generated as part of a TaskPaper template.",
   "version": "1.0",
-  "actions": [{ "identifier": "noteToSubtasks" }],
+  "actions": [{ "identifier": "noteToSubtasks" }, { "identifier": "collapseSubtasks" }],
   "libraries": [
     { "identifier": "noteToSubtasksLib" },
     { "identifier": "noteToSubtasksConfig" }
